# python-java-interop

./: .gitignore  README.md
python_mod/: pyproject.toml
python_mod/src/jep_test/: example.py
with_jep/: .project  pom.xml
with_jep/src/main/java/com/highradius/python/: App.java
with_rust/python-interop/: pom.xml
with_rust/python-interop/src/main/java/com/highradius/interop/: App.java  com_highradius_interop_App.h
with_rust/python_interop/: Cargo.toml
with_rust/python_interop/src/: lib.rs
